2005-12-21  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_text): Work around unexpected behaviour in libgd,
	which does not copy transparent pixels during a copy operation.
	Fixes bug #1386553.

2005-12-17  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Fixed "splot x with line palette lw 10".

2005-12-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/version.c: Changed value of gnuplot_date[] from a useless 
	July 2004 day into "December 2005".

	* src/mouse.h src/mouse.c: Added new field was_splot_map in structure
	t_zoom. It should fix yet another occurence of "set view map; plot x"
	and y-axis reversal when zooming by mouse and unzooming by hotkeys.

2005-12-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_set_color) src/win/wgraph.c (drawgraph): Support for
	text color via RGB and via linetype color values.

2005-12-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.nt: Fixes for linking with bgd.dll.

	* src/term.c: #include <io.h> for __MSC__.

2005-12-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot): Add a BoundingBox structure to describe
	the plot boundaries in 'set view map' mode.

2005-12-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot) src/graph3d.h src/plot3d.c (eval_3dplots)
	src/hidden3d.c (build_networks) docs/gnuplot.doc:   Add an option
	`with <plotstyle> nohidden3d` that allows you to exclude a particular
	plot from the global `set hidden3d` processing.

2005-12-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (COORD_TO_TREECELL, COORD_TO_BITMASK): Avoid
	overflow by undoing effect of surface_scale before mapping to
	integers.
	(store_polygon): Add assert()s to internal macros GET_MIN,
	GET_MAX, to catch problems not handled by above changes.
	(in_front): Avoid accessing qlist[-1].  Make sure
	p_list[] is always filled, even if doing a single-vertex pseudo
	edge.
